ajwa-dry fruits/k8s/07-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-statefulset
  namespace: ajwa-commerce
spec:
  serviceName: "postgres-service"
  replicas: 1
  selector:
    matchLabels:
      app: ajwa-postgres
  template:
    metadata:
      labels:
        app: ajwa-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: ajwa-commerce
spec:
  type: ClusterIP
  selector:
    app: ajwa-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
